plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/FqnImportAndAlias.groovy
import java.util.Date
<error descr="Name 'Date' is already defined in file">import java.util.Calendar as Date</error>